--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/TPino92/jest-RPG/issues"
   },
-  "homepage": "https://github.com/TPino92/jest-RPG#readme"
+  "homepage": "https://github.com/TPino92/jest-RPG#readme",
+  "devDependencies": {
+    "jest": "^26.4.2"
+  }
 }
